fix layout shift

--- a/styles/fields/buttons.css
+++ b/styles/fields/buttons.css
@@ -8,6 +8,7 @@ button {
 
   &.btn-primary {
     background-color: #e43a12;
+    color: var(--surface-primary);
 
     &:hover,
     &:focus {
