--- a/styles/fields/droparea.css
+++ b/styles/fields/droparea.css
@@ -1,6 +1,7 @@
 .dropzone {
   position: relative;
-  border: 1px dashed var(--stroke-default);
+  border: 2px dashed transparent;
+  outline: 1px dashed var(--stroke-default);
   border-radius: 0.25rem;
 
   display: grid;
@@ -22,8 +23,9 @@
     color: #a8a29e;
   }
 
-  &:hover, &:has(input:focus) {
-    border-width: 2px;
+  &:hover,
+  &:has(input:focus) {
+    outline-width: 0;
     border-color: var(--stroke-highlight);
     background-color: var(--surface-secondary);
 
